cutoff chart fixed

--- a/app/assets/stylesheets/c3.css
+++ b/app/assets/stylesheets/c3.css
@@ -4,6 +4,11 @@
   padding: 20px 0 0 0;
 }
 
+.chart_h4 {
+  padding: 0;
+  margin: 10px 0 0 0;
+}
+
 .c3 svg {
   font: 16px Helvetica; }
 
